--- a/mylibrary/src/main/res/layout/my_view.xml
+++ b/mylibrary/src/main/res/layout/my_view.xml
@@ -14,6 +14,7 @@
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="This is my custom view from my little library."
+        android:text="This is my custom view from my little library.Pls test me"
         android:textAppearance="?android:attr/textAppearanceMedium" />
+
 </LinearLayout>
